fixed misalignment on firefox

--- a/src/components/filterComponents/styles.scss
+++ b/src/components/filterComponents/styles.scss
@@ -108,9 +108,11 @@
             background: #FFFFFF;
             border: 1px solid #DADADA;
             border-radius: 5px;
-            width: 246px;
             height: 28px;
             
+        }
+        .search-input{
+            width: 246px;
         }
     }
 }
